# Fast_EDLines_stvo

./: CMakeLists.txt  README.md  run_euroc_MH01.sh  run_euroc_MH02.sh  run_euroc_MH03.sh  run_euroc_MH04.sh  run_euroc_MH05.sh  run_euroc_V101.sh  run_euroc_V102.sh  run_euroc_V103.sh  run_euroc_V201.sh  run_euroc_V202.sh  run_euroc_V203.sh  run_kitti_00.sh  run_kitti_01.sh  run_kitti_02.sh  run_kitti_03.sh  run_kitti_04.sh  run_kitti_05.sh  run_kitti_06.sh  run_kitti_07.sh  run_kitti_08.sh  run_kitti_09.sh  run_kitti_10.sh
app/: imagesStVO.cpp  test_line.cpp  test_lines_time.cpp
config/: scene_config.ini  scene_config_indoor.ini
config/config/: config_euroc.yaml  config_kitti_00.yaml  config_kitti_01.yaml  config_kitti_03.yaml  config_kitti_05.yaml  config_kitti_06.yaml  config_kitti_08.yaml  config_kitti_09.yaml  config_kitti_10.yaml
include/: EDLib.h  NFA.h  ORBextractor.h  auxiliar.h  config.h  dataset.h  gridStructure.h  lineIterator.h  matching.h  pinholeStereoCamera.h  stereoFrame.h  stereoFrameHandler.h
src/: EDLines.cpp  NFA.cpp  ORBextractor.cc  auxiliar.cpp  config.cpp  dataset.cpp  featureMatching.cpp  gridStructure.cpp  lineIterator.cpp  matching.cpp  pinholeStereoCamera.cpp  sceneRepresentation.cpp  stereoFrame.cpp  stereoFrameHandler.cpp
